feat: updated code.

--- a/content/blogs/lets-fucking-go.mdx
+++ b/content/blogs/lets-fucking-go.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Let's Fucking Go!"
 description: "Time to stop overthinking and start building. AI is here, Cursor is your weapon, and the future belongs to the builders."
-author: "Deepak Jangra"
+author: "Gaurav Jain"
 date: "2025-06-22"
 ---
 
